--- a/module3/style.css
+++ b/module3/style.css
@@ -10,6 +10,13 @@ header {
     padding: 20px 35px 20px 8px;
     /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
 }
+h2{
+    position: relative;
+    bottom: 16px;
+    color: #ca22a6;
+    font-size: 32px;
+    text-align: center;
+}
 .container{
     display: flex;
     flex-direction: row;
@@ -81,7 +88,7 @@ p{
     /* min-width: 160px; */
     width: 100%;
     box-shadow: 0px 8px 16px 0px rgb(187, 154, 154);
-    /* z-index: 1; */
+    z-index: 1;
   }
   
   
